tests/integrations/snapshots/integrations__try_nonexistent_group@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the requested group not existing.
---
Some(
    2,
)
