tests/integrations/snapshots/integrations__try_nonexistent_group@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the requested group not existing.
---

