tests/integrations/snapshots/integrations__try_nonexistent_task@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the requested task not existing.
---
Some(
    2,
)
