tests/integrations/snapshots/integrations__try_nonexistent_task@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the requested task not existing.
---

