tests/integrations/snapshots/integrations__version_incompatible@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about incompatible versions.
---
Some(
    2,
)
