tests/integrations/snapshots/integrations__version_incompatible@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about incompatible versions.
---

