tests/integrations/snapshots/integrations__version_invalid@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the version being invalid.
---
Some(
    2,
)
